public/css/merchants/style.css
/* ... */
.form-item__inp,
.form-item__area {
    padding: 0 2px 2px;
    color: #999;
    font-size: 16px;
    font-weight: 400;
    letter-spacing: 0.5px;
    border-bottom-color: #e5e5e5;
}

.form-item__inp--price {
    padding-left: 14px;
}

input.form-item__inp::-moz-placeholder {color: #999;}
input.form-item__inp::-webkit-input-placeholder {color: #999;}
input.form-item__inp:-ms-input-placeholder {color: #999;}
input.form-item__inp::-ms-input-placeholder {color: #999;}
input.form-item__inp::placeholder {color: #999;}

.form-item__area {
    padding: 8px 10px;
    border-color: #e5e5e5;
}

textarea.form-item__area::-moz-placeholder {color: #999;}
textarea.form-item__area::-webkit-input-placeholder {color: #999;}
textarea.form-item__area:-ms-input-placeholder {color: #999;}
textarea.form-item__area::-ms-input-placeholder {color: #999;}
textarea.form-item__area::placeholder {color: #999;}

.form-item__currency {
    position: absolute;
    top: 2px;
    left: 2px;
    color: #999;
    font-size: 16px;
}

.form-item__descr,
.form-item__inp-descr {
    color: #c03535;
    font-size: 13px;
    font-family: 'Lato', sans-serif;
    font-weight: 900;
}

.form-item__descr {
    margin: 10px 0 10px auto;
    max-width: 130px;
    text-align: right;
}

.form-item__inp-descr {
    margin-top: 12px;
    padding-left: 25px;
}

.form-wrapper__btn {
    margin: 30px auto 10px;
    width: 94%;
}

.form-wrapper__btn--ta-r {
    text-align: right;
}

.form-wrapper__btn button[type="submit"],
.form-wrapper__btn input[type="submit"] {
    max-width: 170px;
    padding: 12px 5px;
    color: #1a1a1a;
    font-size: 16px;
    font-family: 'Lato', sans-serif;
    font-weight: 600;
    border-radius: 5px;
}

/* Edit page */
.edit-title__container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
}

.edit-title {
    color: #252424;
    font-size: 24px;
    font-weight: 900;
}

.edit-price {
    margin-left: 70px;
    color: #06974a;
    font-size: 24px;
    font-weight: 900;
}

.edit-title-min {
    margin-top: 20px;
    margin-bottom: 40px;
    color: #252424;
    font-size: 18px;
    font-weight: 500;
}

.edit-gallery {
    margin-left: -1.7%;
    margin-bottom: 24px;
    font-size: 0;
}

.edit-photo-descr {
    margin-bottom: 20px;
    color: #909090;
    font-size: 14px;
    font-style: italic;
}

.edit-item {
    display: inline-block;
    margin-bottom: 1.7%;
    margin-left: 1.7%;
    width: 18.3%;
    font-size: 16px;
    text-align: center;
    vertical-align: top;
    border: 1px solid transparent;
    border-radius: 8px;
    overflow: hidden;
}

.edit-text {
    margin-bottom: 12px;
    color: #000;
    font-size: 18px;
    font-weight: 300;
    line-height: 1.5;
}

.edit-attr__head {
    margin-bottom: 18px;
    color: #252424;
    font-size: 24px;
    font-weight: 900;
}

.edit-attr__wrapper {
    padding: 38px 0 22px;
}

.edit-attr__line {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    margin-bottom: 22px;
}

.edit-attr__title {
    margin-right: 22px;
    width: 110px;
    color: #333;
    font-size: 18px;
    font-weight: bold;
    line-height: 1.12;
    text-align: right;
}

.edit-attr__descr {
    color: #999;
    font-size: 16px;
    line-height: 1.25;
}

.edit-bottom-m {
    margin-bottom: 10px;
}

.edit-photo-wrapper {
    position: absolute;
    bottom: 20px;
    right: 20px;
}

.edit-photo-wrapper input {
    display: none;
}

.edit-photo-btn {
    padding: 11px 10px;
    min-width: 150px;
}

.edit-area {
    color: #353535;
    font-size: 16px;
    border: none;
}

.edit-line-desc {
    color: #2191fc;
    font-size: 18px;
    font-weight: 900;
}

.edit-item__category-wr {
    position: relative;
    float: left;
    margin-right: 20px;
    margin-bottom: 10px;
    width: 43.9%;
}

.edit-item__category-wr .tell-form-category__display {
    padding: 1px 24px 5px 2px;
    color: #999;
    font-size: 16px;
    font-weight: 500;
    border-bottom-color: #e5e5e5;
}

.edit-item__category-wr .tell-form-category__list {
    top: 34px;
    background-color: #f8f8f8;
}

.edit-item__category-wr .tell-form-category__item {
    padding: 4px 28px 6px 2px;
    color: #999;
    font-size: 16px;
    font-weight: 500;
    background-color: #f8f8f8;
    border-bottom-color: #e5e5e5;
}

.edit-item__category-wr .tell-form-category__item--chosen {
    background-color: rgba(255, 253, 0, 0.36);
}

.edit-labels .tell-form-list {
    padding-top: 0;
}

.edit-labels .tell-form-item span {
    padding: 10px 9px 10px 30px;
    color: #fff;
    background-color: #4a4a4a;
    background-image: none;
}

.edit-labels .tell-form-item span i {
    top: 10px;
}

.edit-labels .tell-form-item span i::before,
.edit-labels .tell-form-item span i::after {
    background-color: #fff;
}

/* Settings Page */
.settings-header {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.settings-user {
    margin-right: 30px;
    min-width: 280px;
    width: 280px;
}

.settings-general {
    color: #1d1d1d;
    font-size: 24px;
}

.settings-general__title {
    position: relative;
    padding-bottom: 24px;
    font-weight: bold;
}

.settings-general__title::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 70px;
    height: 4px;
    background-color: #fee500;
}

.settings-item-float {
    float: left;
}

.settings-item-float-cont {
    padding-left: 190px;
}

/* User component */
.user-component {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.user-component__title {
    -webkit-box-flex: 1;
    -ms-flex: 1 0 auto;
    flex: 1 0 auto;
}

.user-component__name {
    width: 202px;
    padding-top: 15px;
    color: #1d1d1d;
    font-size: 24px;
    font-weight: bold;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}
/* ... */

